@@ -1,9 +1,5 @@
 ffmpegfs TODOs
 
-* Fix deprecation: 2017-xx-xx - xxxxxxx - lavr 4.0.0 - avresample.h
-    Deprecate the entire library. Merged years ago to provide compatibility
-    with Libav, it remained unmaintained by the FFmpeg project and duplicated
-    functionality provided by libswresample.
 * Fix deprecation: av_iformat_next/av_oformat_next() lack a replacement (currently
     still used in tools/probetest.c "static void probe" in 58.10.100)
 
