@@ -4,10 +4,20 @@ bin_PROGRAMS = ffmpegfs
 ffmpegfs_SOURCES = ffmpegfs.c fuseops.c transcode.cc transcode.h cache.cc cache.h buffer.cc buffer.h coders.cc coders.h logging.cc logging.h cache_entry.cc cache_entry.h cache_maintenance.c cache_maintenance.h id3v1tag.h wave.h
 ffmpegfs_LDADD = $(fuse_LIBS) -lrt
 
-#if HAVE_FFMPEG
 ffmpegfs_SOURCES += ffmpeg_base.cc ffmpeg_base.h ffmpeg_transcoder.cc ffmpeg_transcoder.h ffmpeg_utils.cc ffmpeg_utils.h
-ffmpegfs_LDADD += $(libavcodec_LIBS) $(libavutil_LIBS) $(libavformat_LIBS) $(libavresample_LIBS) $(libswscale_LIBS)
-AM_CPPFLAGS += $(libavcodec_CFLAGS) $(libavutil_CFLAGS) $(libavformat_CFLAGS) $(libavresample_CFLAGS) $(libswscale_CFLAGS)
-#endif
+ffmpegfs_LDADD += $(libavcodec_LIBS) $(libavutil_LIBS) $(libavformat_LIBS) $(libswscale_LIBS)
+AM_CPPFLAGS += $(libavcodec_CFLAGS) $(libavutil_CFLAGS) $(libavformat_CFLAGS) $(libswscale_CFLAGS)
+
+if USE_LIBSWRESAMPLE
+AM_CPPFLAGS += -DUSE_LIBSWRESAMPLE
+AM_CPPFLAGS += $(libswresample_CFLAGS)
+ffmpegfs_LDADD += $(libswresample_LIBS)
+endif
+
+if USE_LIBAVRESAMPLE
+AM_CPPFLAGS += -DUSE_LIBAVRESAMPLE
+AM_CPPFLAGS += $(libavresample_CFLAGS)
+ffmpegfs_LDADD += $(libavresample_LIBS)
+endif
 
 ffmpegfs_LDADD += $(sqlite3_LIBS)
