@@ -9,6 +9,13 @@ APIs from the FFMpeg version on that they are available.
 
 * Feature: Set stream duration from source file as hint for encoder.
 * Feature: Enhanced logging output for better readability.
+* Fix deprecation: 2017-xx-xx - xxxxxxx - lavr 4.0.0 - avresample.h
+    Deprecate the entire library. Merged years ago to provide compatibility
+    with Libav, it remained unmaintained by the FFmpeg project and duplicated
+    functionality provided by libswresample.
+    swresample is the preferred library in FFMpeg, so it will be used if compiled
+    with FFMpeg by default, even before being deprecated. With libav, which
+    makes libavresample available only, the latter will be used.
 * Fix deprecation: 2016-04-21 - 7fc329e - lavc 57.37.100 - avcodec.h
     Add a new audio/video encoding and decoding API with decoupled input
     and output -- avcodec_send_packet(), avcodec_receive_frame(),
